examples/test/testpolicy13443.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13443
  namespace: namespace414
spec:
  podSelector:
    matchLabels:
      key24: value31
      key28: value48
      key45: value49
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key24: value39
      podSelector:
        matchLabels:
          key19: value49
          key17: value6
          key25: value35
